k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aac-board-ingress
  namespace: asd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: aac.nexvision.cc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aac-board
                port:
                  number: 80
  tls:
    - hosts:
        - aac.nexvision.cc
      secretName: aac-board-tls
